# template-zephyr

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  EMBEDDER.md  README.md  prj.conf  west.yml
.embedder/: memory.json
.embedder/plans/: 1775819975090-nimble-wizard.md
.github/workflows/: ci.yml
boards/: nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay
include/: hal_iface.h
src/: hal.c  hal.h  main.c
src/hal/: hw_init.c
tests/unit/: CMakeLists.txt  mock_hal.h  prj.conf  testcase.yaml
tests/unit/src/: smoke.c
